# mimo

./: Cargo.toml
data/: chrome.json
lib/h2/: Cargo.toml
lib/h2/src/: client.rs
lib/h2/src/frame/: headers.rs  priority.rs
lib/hyper/: Cargo.toml
lib/hyper-rustls/: Cargo.toml
lib/hyper-tls/: Cargo.toml
lib/hyper/src/client/: client.rs  conn.rs
lib/hyper/src/proto/h2/: client.rs
lib/reqwest/: Cargo.toml
lib/rustls/rustls/src/: lib.rs  suites.rs
lib/rustls/rustls/src/client/: client_conn.rs  hs.rs
lib/rustls/rustls/src/tls12/: mod.rs
lib/tls/tokio-rustls/: Cargo.toml
tests/: peet.rs  peet_api.rs  test_chrome_fp.rs
