[package]
name = "mimo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "lib/*"
]
exclude = [
    "lib/h2",
    "lib/rustls",
    "lib/tls",
    "lib/hyper"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { path = "lib/hyper", features = ["client", "http1", "http2", "runtime", "stream"] }
tokio = { version = "1", features = ["test-util", "rt-multi-thread", "macros", "sync", "parking_lot"] }
hyper-rustls = { path = "lib/hyper-rustls", features = ["http2"] }
rustls = { path = "lib/rustls/rustls", features = ["read_buf"] }
h2 = { path = "lib/h2", features = ["stream"] }
tokio-rustls = { path = "lib/tls/tokio-rustls" }
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
env_logger = "*"
log = "*"

[dev-dependencies]
once_cell = "1.13.0"

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false